Harden task persistence and input validation for edge cases